TestSuite/PascalABCTests/errors/err0215.pas
type A = interface
  function f: integer;
  begin
    
  end;
end;

begin

end.